--- a/unfinished/alnes-3/chapter.tex
+++ b/unfinished/alnes-3/chapter.tex
@@ -482,17 +482,23 @@ class CellIntegralRepresentation(IntegralRepresentation):
             ...     
 \end{python}
 The representation classes are quite involved, in particular when using
-quadrature since this is where the 
-graph structures (\emp{Graph} in UFL) are used to split the expressions 
-in smaller sub-expressions. 
+quadrature where the generated code involves multiple loops and quite 
+a few temporary variables. To generate quadrature based code, the
+computational graph algorithms from UFL (in particular the class
+\emp{ufl.Graph}) are used to split the expression tree 
+into smaller sub-expressions. 
 SFC makes GiNaC symbols that represent temporary variables for all
-sub-expressions. Based on the partition from UFL, the temporary variables
+sub-expressions. 
+To place the temporary variables inside the correct loops in the 
+generated code, the computational graph is partitioned based on the 
+dependencies of subexpressions. See Chapter~\ref{chap:alnes-1} for an
+explanation of the partitioning algorithm provided by UFL. 
+Based on the partition from UFL, the temporary variables
 are placed at different locations in the loops in the generated code, 
 depending on sub-expressions depedency. 
 The sub-expression associated with each temporary variable is then 
 translated to a C/C++ string using GiNaC. Finally, SFC puts it all together
-into a tabulate tensor implementation in the code generation classes,
-     \emp{*CG.py}.
+into a tabulate tensor implementation in the code generation classes (\emp{*CG}).
 
 
 
